# linkedin-queens-bot

./: .gitignore  README.md  pyproject.toml
linkedin_queens_bot/: __init__.py  main.py  solver.py
